--- a/.learn/utils/sample.html
+++ b/.learn/utils/sample.html
@@ -1,10 +1,24 @@
-<html lang="en" >
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
+
 <body>
-    <!-- comienza a añadir nuevas etiquetas o tags aquí -->
+    <div class="box">
+        <div class="top-card">
+            <div class="my-postcard">
+                My Postcard
+                <div class="logo-4geeks">
+                <img src="https://raw.githubusercontent.com/breatheco-de/exercise-postcard/main/.learn/assets/4geeks.png" alt="">
+                </div>
+
+
+            </div>
+            <!-- comienza a añadir nuevas etiquetas o tags aquí -->
 </body>
+
 </html>
